--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -101,7 +101,7 @@
 										<figure class="margin-bottom-20">
 											<a href="/schedule/detail/<%=detail_id[i-1]%>">
 											<%if(detail_pic[i-1] != ''){%>
-												<img class="img-responsive" src="/assets/images/demo/content_slider/3-min.jpg" alt="Not Found">
+												<img class="img-responsive" src="/uploads/detail/<%=detail_pic[i-1]%>" alt="Not Found">
 												(<%=detail_pic[i-1]%>)
 											<%}else {%>
 												<img class="img-responsive" src="/assets/images/demo/content_slider/3-min.jpg" alt="Sample Image">
