--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -48,8 +48,8 @@
 				<div class="container">
 					<!-- LEFT -->
 					<div class="col-md-12 col-sm-12" style="margin-top:-50px;margin-bottom:70px;">
-						<div class="row box-gradient box-teal">
-							<div class="col-md-3 col-sm-3" style="margin:20px; padding:10px;">
+						<div class="row box-gradient box-gray">
+							<div class="col-md-4 col-sm-4" style="">
 								<i class="fa fa fa-pencil-square-o fa-4x"></i>
 								<h2 class="countTo font-raleway" data-speed="2000"><%=details.length%></h2>
 							</div>
@@ -59,11 +59,11 @@
 									total_recommends += details[k].recommend;
 								}
 							%>
-							<div class="col-md-3 col-sm-3" style="margin:20px;  padding:10px;">
+							<div class="col-md-4 col-sm-4" style="">
 								<i class="fa fa-heart fa-4x"></i>
 								<h2 class="countTo font-raleway" data-speed="2000" id="total_heart"><%=total_recommends%></h2>
 							</div>
-							<div class="col-md-3 col-sm-3" style="margin:20px;  padding:10px;">
+							<div class="col-md-4 col-sm-4" style="">
 								<i class="fa fa-comment fa-4x"></i>
 								<h2 class="countTo font-raleway" data-speed="2000" id="total_comment"><%=comments.length%></h2>
 							</div>
