--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -109,6 +109,12 @@
 									<ul class="blog-post-info list-inline">
 										<li>
 											<a href="#">
+												<i class="fa fa-comment-o"></i>
+												<span class="font-lato"><%=details[i].commentID.length%></span>
+											</a>
+										</li>
+										<li>
+											<a href="#">
 												<i class="fa fa-clock-o"></i>
 												<span class="font-lato"><%=details[i].detailDate.toDateString()%></span>
 											</a>
