--- a/views/schedule_list.ejs
+++ b/views/schedule_list.ejs
@@ -73,7 +73,7 @@
                         <i class="fa fa-plus"></i>
                         <span>Read More</span>
                     </a>
-                    <a href="#" class="btn btn-reveal btn-warning" data-toggle="modal">
+                    <a href="/schedule/addBookmark/<%=scheduleList[i].id%>" class="btn btn-reveal btn-warning" data-toggle="modal">
                         <i class="fa fa-star"></i>
                         <span>Book Mark</span>
                     </a>
