--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -50,9 +50,12 @@
 					<div class="col-md-12 col-sm-12" style="margin-top:-50px;margin-bottom:70px;">
 						<div class="row box-gradient box-gray">
 							<div class="col-md-4 col-sm-4" style="">
-								<i class="fa fa fa-pencil-square-o fa-4x"></i>
-								<h2 class="countTo font-raleway" data-speed="2000"><%=details.length%></h2>
+								<a href="/timeline" style="color:white">
+									<i class="fa fa fa-pencil-square-o fa-4x"></i>
+									<h2 class="countTo font-raleway" data-speed="2000"><%=details.length%></h2>
+								</a>
 							</div>
+
 							<%
 								var total_recommends = 0;
 								for(var k=0; k < details.length; k++) {
@@ -60,12 +63,16 @@
 								}
 							%>
 							<div class="col-md-4 col-sm-4" style="">
-								<i class="fa fa-heart fa-4x"></i>
-								<h2 class="countTo font-raleway" data-speed="2000" id="total_heart"><%=total_recommends%></h2>
+								<a href="/timeline/recommend" style="color:white">
+									<i class="fa fa-heart fa-4x"></i>
+									<h2 class="countTo font-raleway" data-speed="2000" id="total_heart"><%=total_recommends%></h2>
+								</a>
 							</div>
 							<div class="col-md-4 col-sm-4" style="">
-								<i class="fa fa-comment fa-4x"></i>
-								<h2 class="countTo font-raleway" data-speed="2000" id="total_comment"><%=comments.length%></h2>
+								<a href="/timeline/comments" style="color:white">
+									<i class="fa fa-comment fa-4x"></i>
+									<h2 class="countTo font-raleway" data-speed="2000" id="total_comment"><%=comments.length%></h2>
+								</a>
 							</div>
 						</div>
 					</div>
