--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -111,7 +111,7 @@
             <ol class="breadcrumb">
                 <li><a href="/mypage">나의 글</a></li>
                 <li><a href="/mypage/bookmark">즐겨찾기</a></li>
-                <li class="active">Login</li>
+                <li><a href="/mypage/modify">정보수정</a></li>
             </ol><!-- /breadcrumbs -->
         </div>
     </section>
