--- a/views/index.ejs
+++ b/views/index.ejs
@@ -232,6 +232,7 @@
 
       </div>
 
+      <%- include chat.ejs %>
 
   </section>
   <!-- / -->
@@ -267,10 +268,9 @@
 <script type="text/javascript" src="/assets/js/scripts.js"></script>
 
 <!-- STYLESWITCHER - REMOVE -->
-<script async type="text/javascript" src="/assets/plugins/styleswitcher/styleswitcher.js"></script>
-
 <!-- SWIPER SLIDER -->
 <script type="text/javascript" src="/assets/plugins/slider.swiper/dist/js/swiper.min.js"></script>
 <script type="text/javascript" src="/assets/js/view/demo.swiper_slider.js"></script>
+<script type="text/javascript" src="/javascripts/chat.js"></script>
 </body>
 </html>
