--- a/views/travel_plan_detail.ejs
+++ b/views/travel_plan_detail.ejs
@@ -241,7 +241,7 @@
 
 </div>
 <!-- /wrapper -->
-
+<%- include chat.ejs %>
 
 <!-- SCROLL TO TOP -->
 <a href="#" id="toTop"></a>
@@ -260,6 +260,7 @@
 <script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 
 <script type="text/javascript" src="/assets/js/scripts.js"></script>
+<script type="text/javascript" src="/javascripts/chat.js"></script>
 
 
 </body>
