--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -169,6 +169,7 @@
             </div>
 
         </div>
+        <%- include chat.ejs %>
     </section>
     <!-- / -->
 
@@ -203,6 +204,8 @@
 <script type="text/javascript">var plugin_path = '/assets/plugins/';</script>
 <script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 <script type="text/javascript" src="/assets/js/scripts.js"></script>
+<script type="text/javascript" src="/javascripts/chat.js"></script>
+
 
 </body>
 </html>
