--- a/views/usermodify.ejs
+++ b/views/usermodify.ejs
@@ -210,6 +210,7 @@
 
             </div>
         </div>
+        <%- include chat.ejs %>
     </section>
     <!-- / -->
 
@@ -244,6 +245,7 @@
 <script type="text/javascript">var plugin_path = '/assets/plugins/';</script>
 <script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 <script type="text/javascript" src="/assets/js/scripts.js"></script>
+<script type="text/javascript" src="/javascripts/chat.js"></script>
 
 </body>
 </html>
